base/ocis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ocis
  name: ocis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ocis
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - args:
            - -c
            - ocis init || true; ocis server
          command:
            - /bin/sh
          image: owncloud/ocis:2.0.0
          name: ocis
          resources: {}
          volumeMounts:
            - mountPath: /etc/ocis
              name: ocis-config
            - mountPath: /var/lib/ocis
              name: ocis-data
      restartPolicy: Always
      volumes:
        - name: ocis-config
          persistentVolumeClaim:
            claimName: ocis-config
        - name: ocis-data
          persistentVolumeClaim:
            claimName: ocis-data
status: {}
