base/ocis-network.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ocis-service
  namespace: default
spec:
  ports:
    - name: "9200"
      port: 9200
      targetPort: 9200
  selector:
    app: ocis
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ocis-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - ocis.example.com
    secretName: ocis-tls-cert
  rules:
    - host: ocis.example.com
      http:
        paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: ocis-service
               port:
                 number: 9200
